--- a/pubchem_regression_notsampled.ipynb
+++ b/pubchem_regression_notsampled.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "## Results ##\n",
     "\n",
-    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train various binary classifiers"
+    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train various regression models, which we then use as binary classifiers. This is to see if the continuous input in the activity score has predictive value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -26,19 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-24 10:02:28,036 - INFO - This is a test log message.\n",
-      "2017-09-24 10:02:28,036 - INFO - This is a test log message.\n",
-      "2017-09-24 10:02:28,036 - INFO - This is a test log message.\n",
-      "2017-09-24 10:02:28,036 - INFO - This is a test log message.\n",
-      "2017-09-24 10:02:28,036 - INFO - This is a test log message.\n",
-      "2017-09-24 10:02:28,036 - INFO - This is a test log message.\n"
+      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n",
+      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n",
+      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n",
+      "2017-09-24 13:50:19,840 - INFO - This is a test log message.\n"
      ]
     }
    ],
@@ -52,6 +50,7 @@
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "import sys\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -72,7 +71,6 @@
     "\n",
     "\n",
     "import logging\n",
-    "import sys\n",
     "logger = logging.getLogger()\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
@@ -93,20 +91,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Bin edges must be unique: array([ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.1 ,  0.1 ,\n        0.21,  0.98]).\nYou can drop duplicate edges by setting the 'duplicates' kwarg",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-1db340493288>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# Normalize pubchem activity score to 0...1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mfull_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"PUBCHEM_ACTIVITY_SCORE\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"PUBCHEM_ACTIVITY_SCORE\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mfull_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"PUBCHEM_ACTIVITY_SCORE\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqcut\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PUBCHEM_ACTIVITY_SCORE'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"PUBCHEM_ACTIVITY_SCORE\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/pandas/core/reshape/tile.py\u001b[0m in \u001b[0;36mqcut\u001b[0;34m(x, q, labels, retbins, precision, duplicates)\u001b[0m\n\u001b[1;32m    204\u001b[0m     fac, bins = _bins_to_cuts(x, bins, labels=labels,\n\u001b[1;32m    205\u001b[0m                               \u001b[0mprecision\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprecision\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minclude_lowest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m                               dtype=dtype, duplicates=duplicates)\n\u001b[0m\u001b[1;32m    207\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m     return _postprocess_for_cut(fac, bins, retbins, x_is_series,\n",
-      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/pandas/core/reshape/tile.py\u001b[0m in \u001b[0;36m_bins_to_cuts\u001b[0;34m(x, bins, right, labels, precision, include_lowest, dtype, duplicates)\u001b[0m\n\u001b[1;32m    230\u001b[0m             raise ValueError(\"Bin edges must be unique: {}.\\nYou \"\n\u001b[1;32m    231\u001b[0m                              \u001b[0;34m\"can drop duplicate edges by setting \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 232\u001b[0;31m                              \"the 'duplicates' kwarg\".format(repr(bins)))\n\u001b[0m\u001b[1;32m    233\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m             \u001b[0mbins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0munique_bins\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Bin edges must be unique: array([ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.1 ,  0.1 ,\n        0.21,  0.98]).\nYou can drop duplicate edges by setting the 'duplicates' kwarg"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
+      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
+      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
+      "2017-09-24 13:50:22,675 - INFO - Processed index: 0\n",
+      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
+      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
+      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
+      "2017-09-24 13:50:29,978 - INFO - Processed index: 10000\n",
+      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
+      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
+      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
+      "2017-09-24 13:50:37,063 - INFO - Processed index: 20000\n",
+      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
+      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
+      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
+      "2017-09-24 13:50:44,364 - INFO - Processed index: 30000\n",
+      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
+      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
+      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
+      "2017-09-24 13:50:51,792 - INFO - Processed index: 40000\n",
+      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
+      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
+      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
+      "2017-09-24 13:50:58,824 - INFO - Processed index: 50000\n",
+      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
+      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
+      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
+      "2017-09-24 13:51:05,939 - INFO - Processed index: 60000\n",
+      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
+      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
+      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
+      "2017-09-24 13:51:12,645 - INFO - Processed index: 70000\n",
+      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
+      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
+      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
+      "2017-09-24 13:51:19,766 - INFO - Processed index: 80000\n",
+      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
+      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
+      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
+      "2017-09-24 13:51:26,759 - INFO - Processed index: 90000\n",
+      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
+      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
+      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
+      "2017-09-24 13:51:34,116 - INFO - Processed index: 100000\n",
+      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
+      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
+      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
+      "2017-09-24 13:51:41,218 - INFO - Processed index: 110000\n",
+      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n",
+      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n",
+      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n",
+      "2017-09-24 13:51:48,439 - INFO - Processed index: 120000\n"
      ]
     }
    ],
@@ -126,11 +169,6 @@
     "full_df[\"PUBCHEM_CID\"] = full_df[\"PUBCHEM_CID\"].astype(int)\n",
     "full_df[\"PUBCHEM_ACTIVITY_SCORE\"] = full_df[\"PUBCHEM_ACTIVITY_SCORE\"].astype(int)\n",
     "\n",
-    "# Normalize pubchem activity score to 0...1\n",
-    "full_df[\"PUBCHEM_ACTIVITY_SCORE\"] = full_df[\"PUBCHEM_ACTIVITY_SCORE\"] / 100\n",
-    "full_df[\"PUBCHEM_ACTIVITY_SCORE\"] = pd.qcut(full_df['PUBCHEM_ACTIVITY_SCORE'], 10)\n",
-    "\n",
-    "print(full_df[\"PUBCHEM_ACTIVITY_SCORE\"].head())\n",
     "\n",
     "compound_ids = list()\n",
     "smiles_list = list()\n",
@@ -170,9 +208,9 @@
     "X = np.array(fingerprints)\n",
     "y = np.array(activities,dtype=float)\n",
     "\n",
-    "# Pickle the data to save time in the future\n",
-    "with open('data.regression.nonsampled.pickle', 'wb') as f:\n",
-    "    pickle.dump((X,y), f, pickle.HIGHEST_PROTOCOL)\n"
+    "\n",
+    "with open(\"data.regression.nonsampled.pickle\",\"wb\") as f:\n",
+    "    pickle.dump((X,y),f)"
    ]
   },
   {
@@ -207,7 +245,7 @@
     "# Print the number of compounds loaded\n",
     "logger.info(\"Successfully loaded {0} compounds.\".format(len(X)))\n",
     "\n",
-    "kf = KFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state,class_weight=class_weights)\n",
+    "kf = KFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
     "\n",
     "mse_avg = 0\n",
     "\n",
@@ -218,7 +256,7 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    classifier = DecisionTreeRegressor(random_state=global_random_state, class_weight=class_weights)\n",
+    "    classifier = DecisionTreeRegressor(random_state=global_random_state)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
     "    mse = mean_squared_error(y_test, y_pred)\n",
@@ -228,7 +266,13 @@
     "    y_pred_binary = y_pred > .4\n",
     "    y_test_binary = y_test[0:] > .4\n",
     "\n",
-    "    logger.info(\"How good is it as a classifier?\")\n",
+    "    logger.info(\"How good is it as a classifier at 0.4 threshold?\")\n",
+    "    logger.info(classification_report(y_test_binary, y_pred_binary))\n",
+    "    \n",
+    "    logger.info(\"How good is it at predicting True compounds at 0.9 threshold?\")\n",
+    "    y_pred_binary = y_pred > .9\n",
+    "    y_test_binary = y_test[0:] > .9\n",
+    "    \n",
     "    logger.info(classification_report(y_test_binary, y_pred_binary))\n",
     "    \n",
     "mse_avg = mse_avg / k_fold_splits\n",
@@ -241,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import keras\n",
@@ -251,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# What about a deep neural network?\n",
@@ -272,7 +320,7 @@
     "\n",
     "logger.info(\"Trying a large DNN\")\n",
     "\n",
-    "with open('data.regression.nonsampled.pickle', 'rb') as f:\n",
+    "with open('data.regression.undersampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
     "    (X,y) = pickle.load(f)\n",
     "\n",
@@ -281,11 +329,10 @@
     "    model.add(Dense(1024, input_dim=2048, activation='relu'))\n",
     "    model.add(Dense(512, activation='relu'))\n",
     "    model.add(Dense(256, activation='relu'))\n",
+    "    model.add(Dense(128, activation='relu'))\n",
     "    model.add(Dense(1, activation='sigmoid'))\n",
     "    model.compile(loss='mean_squared_error', optimizer='adam', metrics=[\"mae\"])\n",
     "    return model\n",
-    "\n",
-    "f1_score_avg = 0\n",
     "\n",
     "for train_index, test_index in kf.split(X,y) :\n",
     "\n",
@@ -294,21 +341,25 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    model = KerasRegressor(build_fn=create_model, epochs=10, batch_size=1, verbose=1,class_weight=class_weights)\n",
+    "    model = KerasRegressor(build_fn=create_model, epochs=10, batch_size=1000, verbose=1)\n",
     "    model.fit(X_train,y_train)\n",
     "    y_pred = model.predict(X_test)\n",
-    "    y_pred_binarized = y_pred[0:] >= .4\n",
+    "    \n",
+    "    logger.info(\"How good is it as a classifier at 0.4 threshold?\")\n",
+    "    \n",
+    "    y_pred_binarized = y_pred >= .4\n",
     "    y_test_binarized = y_test[0:] >= .4\n",
     "    fscore = f1_score(y_pred_binarized,y_test_binarized)\n",
-    "    logger.info(\"When using regressor as an active/inactive classifier, f1 score of: {}\".format(fscore))\n",
-    "    f1_score_avg = f1_score_avg + fscore\n",
-    "    logger.debug(classification_report(y_test_binarized,y_pred_binarized))\n",
+    "    logger.info(classification_report(y_test_binarized, y_pred_binarized))\n",
     "\n",
     "    \n",
-    "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
-    "f1_score_avg = f1_score_avg / k_fold_splits\n",
-    "logger.info(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
-    "logger.info(\"Average f1_score is: {}\".format(f1_score_avg))\n"
+    "    logger.info(\"How good is it at predicting True compounds at 0.9 threshold?\")\n",
+    "    logger.info(classification_report(y_test_binary, y_pred_binary))\n",
+    "    \n",
+    "    y_pred_binarized = y_pred >= .9\n",
+    "    y_test_binarized = y_test[0:] >= .9\n",
+    "    \n",
+    "    logger.info(classification_report(y_test_binarized,y_pred_binarized))\n"
    ]
   }
  ],
