--- a/pubchem_bioassay_weighted.ipynb
+++ b/pubchem_bioassay_weighted.ipynb
@@ -26,11 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n",
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n",
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n",
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n",
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n",
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n",
+      "2017-09-24 10:06:00,515 - CRITICAL - Test\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -66,6 +78,8 @@
     "ch.setLevel(logging.DEBUG)\n",
     "ch.setFormatter(formatter)\n",
     "logger.addHandler(ch)\n",
+    "\n",
+    "logger.critical(\"Test\")\n",
     "\n"
    ]
   },
